--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -5,6 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:8401",
+          "https://localhost:44308",
+          "http://localhost:5182",
+          "https://localhost:7076"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;port=3306;userid=root;password=root;database=RecipesWeb;"
